<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="co.com.instrasoft.inu.ProfileActivity">

    <item android:id="@+id/action_search"
        android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_start_quiz_menu" android:title="@string/start_quiz"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_statistics_menu" android:title="@string/statistics"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_log_out_menu" android:title="@string/logout"
        android:orderInCategory="100"
        app:showAsAction="never" />


</menu>
